# rustyfarian-rgb-clock

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  VISION.md  build.rs  deny.toml  diagram.json  justfile  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml.dist
.github/workflows/: audit.yml  fmt.yml  rust.yml  rust_ci.yml
crates/clock-core/: Cargo.toml
crates/clock-core/src/: lib.rs
crates/clock-pure/: Cargo.toml
crates/clock-pure/src/: lib.rs
docs/: ROADMAP.md  testing-strategy.md
docs/adr/: 001-caller-provided-buffer-for-animations.md  002-integer-hsv-to-rgb-conversion.md  003-shared-color-utilities-location.md  004-rgb8-type-definition.md
scripts/: host-target.sh
src/: main.rs  rgb_clock.rs
wokwi/: README.md  test-rainbow-frames.yaml  test-startup.yaml
