[workspace]
members = ["crates/clock-core"]
resolver = "2"

[workspace.package]
authors = ["Florian Waibel <fwaibel@datenkollektiv.de>"]
edition = "2021"

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
log = "0.4"
rgb = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ESP-IDF dependencies
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
esp-idf-svc = "0.51"

# Local crate (app-specific)
clock-core = { path = "crates/clock-core" }

# External crates from rustyfarian-ws2812 repo
ferriswheel = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812" }
rustyfarian-esp-idf-ws2812 = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812" }

# External crates from rustyfarian-network repo
rustyfarian-esp-idf-mqtt = { git = "https://github.com/datenkollektiv/rustyfarian-network" }
rustyfarian-esp-idf-wifi = { git = "https://github.com/datenkollektiv/rustyfarian-network" }

[package]
name = "rustyfarian-rgb-clock"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version = "1.77"
description = "RGB LED clock for ESP32-C6 using WS2812 LEDs and MQTT time synchronization"
license = "MIT"
repository = "https://github.com/datenkollektiv/rustyfarian-rgb-clock"
keywords = ["esp32", "led", "clock", "ws2812", "mqtt"]
categories = ["embedded", "hardware-support"]

[[bin]]
name = "rustyfarian-rgb-clock"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow.workspace = true
log.workspace = true
esp-idf-hal.workspace = true
esp-idf-svc.workspace = true
rgb.workspace = true
serde.workspace = true
serde_json.workspace = true
clock-core.workspace = true
rustyfarian-esp-idf-mqtt.workspace = true
rustyfarian-esp-idf-wifi.workspace = true
rustyfarian-esp-idf-ws2812.workspace = true
ferriswheel.workspace = true

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
